--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -15,16 +15,15 @@ color: #ff9900;
 -->
  </style></head>
 <body>
-<h1>Version 0.3.8 (12/??/2009)</h1>
-<p>This version is a prerelease with some missing functionnalities
-and, probably, some bugs.<br>
+<h1>Version 0.4.0 (12/??/2009)</h1>
+<p>This version is a prerelease with some missing functionnalities.<br>
 You will also find some GUI items without any
 tooltip.<br>
 <br>
 Nevertheless it's already useful to manage your bank accounts (I&nbsp;use
 it for my own). Feel free to report any bug.<br>
 </p>
-<p>The next functionnalities I plan to add :
+<p>Some functionnalities I plan to add :
 </p>
 <ul><li>Something
 to edit payment modes ... (currently, you can add or remove them, but not
