--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -16,10 +16,9 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.3.8 (??/12/2009)</h1>
+<h1>Version 0.4.0 (??/12/2009)</h1>
 <p>Cette version&nbsp;est&nbsp;une pre-version à laquelle
-manquent quelques fonctionnalités, et qui,
-probablement,&nbsp;comporte quelques bugs. Vous trouverez
+manquent quelques fonctionnalités. Vous trouverez
 également quelques objets dans l'interface sans bulle d'aide.</p>
 <p>Néanmoins, elle est déjà utilisable pour gérer vos comptes
 bancaires
@@ -39,7 +38,8 @@ la prise en charge des fichiers au format OFX (issus de Money ou de
 votre banque) ... ça dépendra du nombre de demandes.</li></ul>
 <h2>Nouveautés de cette version</h2>
 <ul><li><span class="bugFix"></span><span class="bugFix"></span>Amélioration des capacités de filtrage des opérations (sur les catégories, les modes, etc ...).</li><li>Correction de nombreuses erreurs dans la version anglaise.</li><li><span class="bugFix">Correction de bug </span>
-: Parfois, la prochaine échéance d'une opération périodique n'était pas mise à jour lors de la génération des opérations périodiques.</li>
+: Parfois, la prochaine échéance d'une opération périodique n'était pas
+mise à jour lors de la génération des opérations périodiques.</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
