--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -3,7 +3,7 @@
 <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Release notes</title>
 
 <style type="text/css">
-.bugFix {
+<!--.bugFix {
 color: #009900;
 }
 .beAware {
@@ -17,43 +17,38 @@ color: #ff9900;
 </head>
 <body>
 <h1>Version 0.4.0 (12/31/2009)</h1>
-<p>This version is a prerelease with some missing
-functionnalities.<br>
-You will also find some GUI items without any
-tooltip.<br>
-<br>
-Nevertheless it's already useful to manage your bank accounts
-(I&nbsp;use
-it for my own). Feel free to report any bug.<br>
-</p>
-<p>Some functionnalities I plan to add :
-</p>
-<ul>
-<li>Something
-to edit payment modes ... (currently, you can add or remove them, but
-not
-edit). For now, you have to manually edit
-the XML file ... at your own risks.</li>
-<li>The ability to compress and encrypt data files and store
-them over the Internet.</li>
-<li>An auto-complete wizard in the "new transaction"
-dialog that would be able to complete the description as you type and
-to deduce other informations (especially categories).</li>
-<li>Maybe the ability to deal with OFX data files ... If a lot
-of users ask for it.</li>
-</ul>
 <h2>New in this version</h2>
 <ul>
 <li><span class="bugFix"></span><span class="bugFix"></span>Introduce extended filtering
 capabilities (on category, modes, etc ...).</li>
-<li><span class="bugFix">Corrects</span>
-a lot of mistakes in english wording.</li>
+<li><span class="bugFix">Fixes</span>
+a lot of mistakes in english wording. Fixes some missing tooltip.</li>
 <li><span class="bugFix">Bug fixed</span> :
 Sometimes, the next date of a periodical transaction was not updated
 after generating an occurence of this transaction.</li>
 <li><span class="bugFix">Bug fixed</span> :
 The currency converter tool didn't work under Ubuntu (and probably
 other Linux systems).</li>
+<li><span class="bugFix">Bug fixed</span> :
+Sometimes, it was impossible to change the account of a transaction.</li>
+</ul>
+<h2>What is planned in future versions</h2>
+<ul>
+<li>Something
+to edit payment modes ... (currently, you can add or remove them, but
+not
+edit). For now, you have to manually edit
+the XML file ... at your own risks.</li>
+<li>The ability to edit several transactions at a time.</li>
+<li>An auto-complete wizard in the "new transaction"
+dialog that would be able to complete the description as you type and
+to deduce other informations (especially categories).</li>
+<li>Some new statistic charts.</li>
+<li>The ability to bookmark prefered filters.</li>
+<li>The ability to compress and encrypt data files and store
+them over the Internet.</li>
+<li>Maybe the ability to deal with OFX data files ... If a lot
+of users ask for it.</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
