--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -18,32 +18,6 @@ color: #ff9900;
 </head>
 <body>
 <h1>Version 0.4.0 (31/12/2009)</h1>
-<p>Cette version&nbsp;est&nbsp;une pre-version à laquelle
-manquent quelques fonctionnalités. Vous trouverez
-également quelques objets dans l'interface sans bulle d'aide.</p>
-<p>Néanmoins, elle est déjà utilisable pour gérer vos comptes
-bancaires
-(d'ailleurs je l'utilise pour les miens).<br>
-N'hésitez pas à signaler les bugs que vous pourriez trouver.<br>
-</p>
-<p>Quelques fonctionnalités que je prévois d'ajouter
-prochainement :</p>
-<ul>
-<li>L'édition des modes de paiement (pour l'instant, on peut
-en ajouter, les supprimer, mais pas les éditer). On peut éditer le
-fichier de données (au format XML) ... mais c'est à vos risques à
-périls.</li>
-<li>La possibilité de compresser le fichier de
-données, de le protéger par mot de passe, et de le stocker/lire sur
-Internet.</li>
-<li>Une auto-complétion dans le dialogue de création
-d'une opération. Celui-ci serait chargé de completer les descriptions
-possibles au fur et à mesure de la saisie et en déduire les
-informations (typiquement la catégorie).</li>
-<li>Peut-être
-la prise en charge des fichiers au format OFX (issus de Money ou de
-votre banque) ... ça dépendra du nombre de demandes.</li>
-</ul>
 <h2>Nouveautés de cette version</h2>
 <ul>
 <li><span class="bugFix"></span><span class="bugFix"></span>Ajout de capacités de filtrage
@@ -56,7 +30,27 @@ de nombreuses erreurs dans la version anglaise.</li>
 mise à jour lors de la génération des opérations périodiques.</li>
 <li><span class="bugFix">Correction de bug </span>
 : L'outil de conversion des devises ne fonctionnait pas sous Ubuntu (et
-probablement sous d'autres OS Linux)</li>
+probablement sous d'autres OS Linux).</li>
+<li><span class="bugFix">Correction de
+bug&nbsp;</span>: Parfois, le changement de compte d'une
+transaction ne fonctionnait pas.</li>
+</ul>
+<h2>Fonctionnalités prévues pour de prochaines versions</h2>
+<ul>
+<li>L'édition des modes de paiement (pour l'instant, on peut
+en ajouter, les supprimer, mais pas les éditer). On peut éditer le
+fichier de données (au format XML) ... mais c'est à vos risques à
+périls.</li><li>La possibilité d'éditer plusieurs opérations à la fois.</li>
+
+<li>Une auto-complétion dans le dialogue de création
+d'une opération. Celui-ci serait chargé de completer les descriptions
+possibles au fur et à mesure de la saisie et en déduire les
+informations (typiquement la catégorie).</li><li>De nouveaux graphiques de statistiques</li><li>La possibilité de créer des raccourcis vers les filters préférés.</li>
+<li>La possibilité de compresser le fichier de
+données, de le protéger par mot de passe, et de le stocker/lire sur
+Internet.</li><li>Peut-être
+la prise en charge des fichiers au format OFX (issus de Money ou de
+votre banque) ... ça dépendra du nombre de demandes.</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
