--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -13,10 +13,9 @@ color: #aa0000;
 color: #ff9900;
 }
 -->
-</style>
-</head>
+</style></head>
 <body>
-<h1>Version 0.4.0 (12/31/2009)</h1>
+<h1>Version 0.4.0 (01/02/2010)</h1>
 <h2>New in this version</h2>
 <ul>
 <li><span class="bugFix"></span><span class="bugFix"></span>Introduce extended filtering
@@ -28,7 +27,11 @@ Sometimes, the next date of a periodical transaction was not updated
 after generating an occurence of this transaction.</li>
 <li><span class="bugFix">Bug fixed</span> :
 The currency converter tool didn't work under Ubuntu (and probably
-other Linux systems).</li>
+other Linux systems).</li><li><span class="bugFix">Bug fixed</span>
+:
+The currency converter tool was very, very slow when European Central
+Bank did not refresh its rates for more than one day (for instance when
+it's new year's day).</li>
 <li><span class="bugFix">Bug fixed</span> :
 Sometimes, it was impossible to change the account of a transaction.</li>
 </ul>
