--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -14,10 +14,9 @@ color: #AA0000;
 color: #ff9900;
 }
 -->
-</style>
-</head>
+</style></head>
 <body>
-<h1>Version 0.4.0 (31/12/2009)</h1>
+<h1>Version 0.4.0 (02/01/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
 <li><span class="bugFix"></span><span class="bugFix"></span>Ajout de capacités de filtrage
@@ -30,7 +29,10 @@ de nombreuses erreurs dans la version anglaise.</li>
 mise à jour lors de la génération des opérations périodiques.</li>
 <li><span class="bugFix">Correction de bug </span>
 : L'outil de conversion des devises ne fonctionnait pas sous Ubuntu (et
-probablement sous d'autres OS Linux).</li>
+probablement sous d'autres OS Linux).</li><li><span class="bugFix">Correction de bug</span>&nbsp;:
+L'outil de conversion des devises était très, très, très lent quand la
+banque centrale européenne n'avait pas mis à jour ses taux depuis plus
+de 24h (comme au jour de l'an, par exemple).</li>
 <li><span class="bugFix">Correction de
 bug&nbsp;</span>: Parfois, le changement de compte d'une
 transaction ne fonctionnait pas.</li>
