--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -47,7 +47,7 @@ périls.</li><li>La possibilité d'éditer plusieurs opérations à la fois.</li>
 <li>Une auto-complétion dans le dialogue de création
 d'une opération. Celui-ci serait chargé de completer les descriptions
 possibles au fur et à mesure de la saisie et en déduire les
-informations (typiquement la catégorie).</li><li>De nouveaux graphiques de statistiques</li><li>La possibilité de créer des raccourcis vers les filters préférés.</li>
+informations (typiquement la catégorie).</li><li>De nouveaux graphiques de statistiques</li><li>La possibilité de créer des raccourcis vers les filtres préférés.</li>
 <li>La possibilité de compresser le fichier de
 données, de le protéger par mot de passe, et de le stocker/lire sur
 Internet.</li><li>Peut-être
