--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -15,25 +15,11 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.4.0 (01/03/2010)</h1>
+<h1>Version 0.4.1 (01/??/2010)</h1>
 <h2>New in this version</h2>
 <ul>
-<li><span class="bugFix"></span><span class="bugFix"></span>Introduce extended filtering
-capabilities (on category, modes, etc ...).</li>
-<li><span class="bugFix">Fixes</span>
-a lot of mistakes in english wording. Fixes some missing tooltip.</li>
 <li><span class="bugFix">Bug fixed</span> :
-Sometimes, the next date of a periodical transaction was not updated
-after generating an occurence of this transaction.</li>
-<li><span class="bugFix">Bug fixed</span> :
-The currency converter tool didn't work under Ubuntu (and probably
-other Linux systems).</li><li><span class="bugFix">Bug fixed</span>
-:
-The currency converter tool was very, very slow when European Central
-Bank did not refresh its rates for more than one day (for instance when
-it's new year's day).</li>
-<li><span class="bugFix">Bug fixed</span> :
-Sometimes, it was impossible to change the account of a transaction.</li>
+In statistic panel, sometimes, some transactions that would have been rejected by the filter was not.</li>
 </ul>
 <h2>What is planned in future versions</h2>
 <ul>
@@ -55,7 +41,18 @@ of users ask for it.</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
-<h2>Version 0.3.7 (12/05/2009)</h2>
+<h2>Version 0.4.0 (01/03/2010)</h2><ul><li><span class="bugFix"></span><span class="bugFix"></span>Introduce extended filtering
+capabilities (on category, modes, etc ...).</li><li><span class="bugFix">Fixes</span>
+a lot of mistakes in english wording. Fixes some missing tooltip.</li><li><span class="bugFix">Bug fixed</span> :
+Sometimes, the next date of a periodical transaction was not updated
+after generating an occurence of this transaction.</li><li><span class="bugFix">Bug fixed</span> :
+The currency converter tool didn't work under Ubuntu (and probably
+other Linux systems).</li><li><span class="bugFix">Bug fixed</span>
+:
+The currency converter tool was very, very slow when European Central
+Bank did not refresh its rates for more than one day (for instance when
+it's new year's day).</li><li><span class="bugFix">Bug fixed</span> :
+Sometimes, it was impossible to change the account of a transaction.</li></ul><h2>Version 0.3.7 (12/05/2009)</h2>
 <ul>
 <li><span class="bugFix"></span><span class="bugFix"></span>Dates can now be selected in a
 calendar.</li>
