--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -16,26 +16,13 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.4.0 (03/01/2010)</h1>
+<h1>Version 0.4.1 (??/01/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-<li><span class="bugFix"></span><span class="bugFix"></span>Ajout de capacités de filtrage
-complètes des opérations&nbsp; (sur les catégories, les modes, etc
-...).</li>
-<li><span class="bugFix">Correction</span>
-de nombreuses erreurs dans la version anglaise.</li>
-<li><span class="bugFix">Correction de bug </span>
-: Parfois, la prochaine échéance d'une opération périodique n'était pas
-mise à jour lors de la génération des opérations périodiques.</li>
-<li><span class="bugFix">Correction de bug </span>
-: L'outil de conversion des devises ne fonctionnait pas sous Ubuntu (et
-probablement sous d'autres OS Linux).</li><li><span class="bugFix">Correction de bug</span>&nbsp;:
-L'outil de conversion des devises était très, très, très lent quand la
-banque centrale européenne n'avait pas mis à jour ses taux depuis plus
-de 24h (comme au jour de l'an, par exemple).</li>
 <li><span class="bugFix">Correction de
-bug&nbsp;</span>: Parfois, le changement de compte d'une
-transaction ne fonctionnait pas.</li>
+bug&nbsp;</span>: Parfois, dans
+le panneau statistiques, certaines opérations étaient prises en compte
+alors qu'elles auraient du être rejetées par le filtre.</li>
 </ul>
 <h2>Fonctionnalités prévues pour de prochaines versions</h2>
 <ul>
@@ -56,7 +43,19 @@ votre banque) ... ça dépendra du nombre de demandes.</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
-<h2>Version&nbsp;0.3.7 (05/12/2009)</h2>
+<h2>Version&nbsp;0.4.0 (03/01/2010)</h2><ul><li>Ajout de capacités de filtrage
+complètes des opérations&nbsp; (sur les catégories, les modes, etc
+...).</li><li><span class="bugFix">Correction</span>
+de nombreuses erreurs dans la version anglaise.</li><li><span class="bugFix">Correction de bug </span>
+: Parfois, la prochaine échéance d'une opération périodique n'était pas
+mise à jour lors de la génération des opérations périodiques.</li><li><span class="bugFix">Correction de bug </span>
+: L'outil de conversion des devises ne fonctionnait pas sous Ubuntu (et
+probablement sous d'autres OS Linux).</li><li><span class="bugFix">Correction de bug</span>&nbsp;:
+L'outil de conversion des devises était très, très, très lent quand la
+banque centrale européenne n'avait pas mis à jour ses taux depuis plus
+de 24h (comme au jour de l'an, par exemple).</li><li><span class="bugFix">Correction de
+bug&nbsp;</span>: Parfois, le changement de compte d'une
+transaction ne fonctionnait pas.</li></ul><h2>Version&nbsp;0.3.7 (05/12/2009)</h2>
 <ul>
 <li>Les dates peuvent à présent être sélectionnées dans un
 calendrier.</li>
