--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -19,7 +19,7 @@ color: #ff9900;
 <h1>Version 0.4.1 (??/01/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-<li><span class="bugFix">Correction de
+<li>Ajout d'un vue budgetaire.<span class="bugFix"></span></li><li><span class="bugFix">Correction de
 bug&nbsp;</span>: Parfois, dans
 le panneau statistiques, certaines opérations étaient prises en compte
 alors qu'elles auraient du être rejetées par le filtre.</li>
