--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -18,7 +18,7 @@ color: #ff9900;
 <h1>Version 0.4.1 (01/??/2010)</h1>
 <h2>New in this version</h2>
 <ul>
-<li><span class="bugFix">Bug fixed</span> :
+<li>Adds a budget view.<span class="bugFix"></span></li><li><span class="bugFix">Bug fixed</span> :
 In statistic panel, sometimes, some transactions that would have been rejected by the filter was not.</li>
 </ul>
 <h2>What is planned in future versions</h2>
