--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -19,7 +19,8 @@ color: #ff9900;
 <h1>Version 0.4.1 (??/01/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-<li>Ajout d'un vue budgetaire.<span class="bugFix"></span></li><li><span class="bugFix">Correction de
+<li>Ajout d'un vue budgetaire.</li><li>Ajout d'un panneau de préférénces permettant de configurer la couleur du rapport des soldes
+(des utilisateurs ont rapporté que les soldes positifs étaient quasiment illisibles).</li><li><span class="bugFix">Correction de
 bug&nbsp;</span>: Parfois, dans
 le panneau statistiques, certaines opérations étaient prises en compte
 alors qu'elles auraient du être rejetées par le filtre.</li>
