--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -21,7 +21,7 @@ color: #ff9900;
 <li>Adds a budget view (it seems users really want it).</li><li>Adds a preference panel to configure
 the balance report fields colors (some users reported the positive
 balance were quite illegible).</li><li><span class="bugFix">Bug fixed</span> :
-In statistic panel, sometimes, some transactions that would have been rejected by the filter was not.</li></ul>
+In statistic panel, sometimes, some transactions that would have been rejected by the filter were not.</li></ul>
 <h2>What is planned in future versions</h2>
 <ul>
 <li>Something
