Adds printing support for plugins Simple printing support for transactions table

--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -16,15 +16,10 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.5.0 (10/01/2010)</h1>
+<h1>Version 0.5.1 (17/01/2010)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-<li>Ajout d'un vue budgetaire (Il semble que certains utilisateurs la veulent vraiment).</li><li>Ajout d'un panneau de préférénces permettant de configurer la couleur du rapport des soldes
-(des utilisateurs ont rapporté que les soldes positifs étaient quasiment illisibles).</li><li><span class="bugFix">Correction de
-bug&nbsp;</span>: Parfois, dans
-le panneau statistiques, certaines opérations étaient prises en compte
-alors qu'elles auraient du être rejetées par le filtre.</li>
-</ul>
+<li>Support de l'impression de la liste des opérations.</li></ul>
 <h2>Fonctionnalités prévues pour de prochaines versions</h2>
 <ul>
 <li>L'édition des modes de paiement (pour l'instant, on peut
@@ -44,7 +39,11 @@ votre banque) ... ça dépendra du nombre de demandes.</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
-<h2>Version&nbsp;0.4.0 (03/01/2010)</h2><ul><li>Ajout de capacités de filtrage
+<h2>Version&nbsp;0.5.0 (10/01/2010)</h2><ul><li>Ajout d'un vue budgetaire (Il semble que certains utilisateurs la veulent vraiment).</li><li>Ajout d'un panneau de préférénces permettant de configurer la couleur du rapport des soldes
+(des utilisateurs ont rapporté que les soldes positifs étaient quasiment illisibles).</li><li><span class="bugFix">Correction de
+bug&nbsp;</span>: Parfois, dans
+le panneau statistiques, certaines opérations étaient prises en compte
+alors qu'elles auraient du être rejetées par le filtre.</li></ul><h2>Version&nbsp;0.4.0 (03/01/2010)</h2><ul><li>Ajout de capacités de filtrage
 complètes des opérations&nbsp; (sur les catégories, les modes, etc
 ...).</li><li><span class="bugFix">Correction</span>
 de nombreuses erreurs dans la version anglaise.</li><li><span class="bugFix">Correction de bug </span>
