--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -15,13 +15,10 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.5.0 (01/10/2010)</h1>
+<h1>Version 0.5.1 (01/17/2010)</h1>
 <h2>New in this version</h2>
 <ul>
-<li>Adds a budget view (it seems users really want it).</li><li>Adds a preference panel to configure
-the balance report fields colors (some users reported the positive
-balance were quite illegible).</li><li><span class="bugFix">Bug fixed</span> :
-In statistic panel, sometimes, some transactions that would have been rejected by the filter were not.</li></ul>
+<li>Adds transactions printing (feature resqueted by users).</li></ul>
 <h2>What is planned in future versions</h2>
 <ul>
 <li>Something
@@ -42,9 +39,12 @@ of users ask for it.</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
-<h2>Version 0.4.0 (01/03/2010)</h2><ul><li><span class="bugFix"></span><span class="bugFix"></span>Introduce extended filtering
+<h2>Version 0.5.0 (01/10/2010)</h2><ul><li>Adds a budget view (it seems users really want it).</li><li>Adds a preference panel to configure
+the balance report fields colors (some users reported the positive
+balance were quite illegible).</li><li><span class="bugFix">Bug fixed</span> :
+In statistic panel, sometimes, some transactions that would have been rejected by the filter were not.</li></ul><h2>Version 0.4.0 (01/03/2010)</h2><ul><li><span class="bugFix"></span><span class="bugFix"></span>Introduce extended filtering
 capabilities (on category, modes, etc ...).</li><li><span class="bugFix">Fixes</span>
-a lot of mistakes in english wording. Fixes some missing tooltip.</li><li><span class="bugFix">Bug fixed</span> :
+a lot of mistakes in english wording. Fixes some missing tooltips.</li><li><span class="bugFix">Bug fixed</span> :
 Sometimes, the next date of a periodical transaction was not updated
 after generating an occurence of this transaction.</li><li><span class="bugFix">Bug fixed</span> :
 The currency converter tool didn't work under Ubuntu (and probably
