--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -16,9 +16,9 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.5.2-2 (23/01/2010)</h1>
+<h1>Version 0.5.3 (24/01/2010)</h1>
 <h2>Nouveautés de cette version</h2>
-<ul><li>Support partiel du portuguais (Merci à Marco).</li></ul>
+<ul><li>Support partiel du portuguais (Merci à Marco).</li><li>Ajout de la possibilité de masquer les colonnes dans la tables des opérations.</li></ul>
 <h2>Fonctionnalités prévues pour de prochaines versions</h2>
 <ul>
 <li>La possibilité d'éditer plusieurs opérations à la fois.</li>
@@ -26,7 +26,7 @@ color: #ff9900;
 <li>Une auto-complétion dans le dialogue de création
 d'une opération. Celui-ci serait chargé de completer les descriptions
 possibles au fur et à mesure de la saisie et en déduire les
-informations (typiquement la catégorie).</li><li>De nouveaux graphiques de statistiques</li><li>La possibilité de créer des raccourcis vers les filtres préférés.</li><li>La possibilité de définir un budget cible et de le comparer à la dure réalité ;-)</li>
+informations (typiquement la catégorie).</li><li>Améliorations dans les graphiques de statistiques (possibilité de grouper plusieurs catégories).</li><li>La possibilité de créer des raccourcis vers les filtres préférés.</li><li>La possibilité de définir un budget cible et de le comparer à la dure réalité ;-)</li>
 <li>La possibilité de compresser le fichier de
 données, de le protéger par mot de passe, et de le stocker/lire sur
 Internet.</li><li>Peut-être
