--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -15,10 +15,11 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.5.3 (01/24/2010)</h1>
+<h1>Version 0.5.3 (01/25/2010)</h1>
 <h2>New in this version</h2>
 <ul>
-<li>Currency converter Portuguese translation (Thank's to Marco)</li><li>Adds the ability to show/hide columns in the transactions table.</li></ul>
+<li>Currency converter Portuguese translation (Thank's to Marco)</li><li><span class="bugFix">Fixes</span>
+a lot of mistakes in english wording (Thank's to Sharada)</li><li>Adds the ability to show/hide columns in the transactions table.</li></ul>
 <h2>What is planned in future versions</h2>
 <ul>
 <li>The ability to edit several transactions at a time.</li>
